cron.js file changed

--- a/vercel.json
+++ b/vercel.json
@@ -2,5 +2,9 @@
   "crons": [{
     "path": "/api/cron",
     "schedule": "0 10 * * *"
+  }],
+  "rewrites": [{
+    "source": "/(.*)",
+    "destination": "/"
   }]
 }
