cron.js file changed

--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,20 @@
 {
+ "version": 2,
+   "builds": [
+     {
+       "src": "app.py",
+       "use": "@vercel/python"
+     }
+   ],
+   "routes": [{ 
+    "handle": "filesystem" 
+    },
+    { "src": "/run-colab", "dest": "/run-colab" }
+  ],
   "crons": [{
     "path": "/api/cron",
     "schedule": "0 10 * * *"
-  }],
-  "rewrites": [{
-    "source": "/(.*)",
-    "destination": "/"
   }]
 }
+
+
