--- a/vercel.json
+++ b/vercel.json
@@ -1,26 +1,20 @@
 {
-  "version": 2,
-  "builds": [
-    {
-      "src": "app.py",
-      "use": "@vercel/python"
-    }
+ "version": 2,
+   "builds": [
+     {
+       "src": "app.py",
+       "use": "@vercel/python"
+     }
+   ],
+   "routes": [
+    { "src": "/", "dest": "/app.py" },
+    { "src": "/run-colab", "dest": "/run-colab" }
   ],
-  "routes": [
-    {
-      "src": "/(.*)",
-      "dest": "/app.py"
-    }
-  ],
-  "env": {
-    "FLASK_APP": "app.py"
-  },
-  "crons": [
-    {
-      "path": "/api/cron",
-      "schedule": "0 10 * * *"
-    }
-  ]
+  "crons": [{
+    "path": "/api/cron",
+    "schedule": "0 10 * * *"
+  }]
 }
+
 
 
