--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,17 @@
 {
-  "rewrites": [{ "source": "/(.*)", "destination": "/" }]
-}
+	"builds":[
+		{
+			"src":"api/app.py",
+			"use":"@vercel/python"
+		}
+	],
+	"routes":[
+		{
+			"src":"/(.*)",
+			"dest":"api/app.py"
+		}
 
+	]
+}
 
 
