--- a/vercel.json
+++ b/vercel.json
@@ -6,6 +6,10 @@
 	"routes": [{
 		"src": "/(.*)",
 		"dest": "api/app.py"
-	}]
+	}],
+       "crons": [{
+                "path": "/api/cron",
+                "schedule": "0 10 * * *"
+        }]
 }
 
