trying to download a file

--- a/vercel.json
+++ b/vercel.json
@@ -8,7 +8,7 @@
 		"dest": "api/app.py"
 	}],
        "crons": [{
-                "path": "/api/cron",
+                "path": "/api/cron.js",
                 "schedule": "0 10 * * *"
         }]
 }
