--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,11 @@
 {
 	"builds": [{
-		"src": "api/app.py",
+		"src": "/api/app.py",
 		"use": "@vercel/python"
 	}],
 	"routes": [{
 		"src": "/(.*)",
-		"dest": "api/app.py"
+		"dest": "/api/app.py"
 	}],
        "crons": [{
                 "path": "/api/cron.js",
